# threatlens-ai

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: analyze-cve.md  commit-and-push.md  lint.md  review.md  ship.md  test.md
.claude/rules/: api-routes.md  ml-models.md  rag-pipeline.md  tests.md
.github/workflows/: ci.yml
configs/: model_config.yaml  rag_config.yaml
data/knowledge_base/: authentication_bypass_fixes.md  buffer_overflow_mitigation.md  command_injection_remediation.md  incident_response_checklist.md  log_monitoring_patterns.md  network_segmentation_guide.md  patch_management_playbook.md  privilege_escalation_prevention.md  sql_injection_remediation.md  xss_prevention_guide.md
docker/: Dockerfile  docker-compose.yml
scripts/: train_pipeline.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: analyze.py  playbook.py  predict.py
src/data/: feature_store.py  nvd_client.py  preprocessor.py
src/evaluation/: explainability.py  metrics.py
src/models/: cve_clusterer.py  model_registry.py  severity_predictor.py  text_classifier.py
src/monitoring/: drift_detector.py  performance_tracker.py
src/rag/: knowledge_base.py  playbook_generator.py  retriever.py
src/rag/prompts/: remediation.py
tests/: test_api.py  test_cve_clusterer.py  test_evaluation.py  test_monitoring.py  test_nvd_client.py  test_preprocessor.py  test_rag_pipeline.py  test_severity_predictor.py  test_text_classifier.py
tests/test_data/: sample_cves.json
